# chain-ballot-x

./: .env.example  .gitignore  README.md  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
  docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md  SMART_CONTRACT_DEPLOY.md
app/: globals.css  layout-client.tsx  layout.tsx  page.tsx  providers.tsx
app/governance/: page.tsx
app/proposals/: page.tsx
components/: Header.tsx
components/ui/: alert-dialog.tsx  calendar.tsx  carousel.tsx  command.tsx  form.tsx  pagination.tsx  sidebar.tsx  toggle-group.tsx
config/: app.ts  contracts.ts
services/: contractService.ts
smart-contract/chainballotx/: Cargo.toml
smart-contract/chainballotx/mandos/: create_proposal.scen.json  edge_cases.scen.json  governance.scen.json  vote_workflow.scen.json
smart-contract/chainballotx/meta/: Cargo.toml
smart-contract/chainballotx/meta/src/: main.rs
smart-contract/chainballotx/src/: chainballotx.rs  chainballotx_proxy.rs
smart-contract/chainballotx/tests/: integration_tests.rs  mandos_test.rs  performance_tests.rs
smart-contract/chainballotx/wasm/: Cargo.toml
smart-contract/chainballotx/wasm/src/: lib.rs
utils/: contract.ts
